--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-avatar": "^5.0.1",
+    "react-bootstrap": "^2.4.0",
+    "react-bootstrap-button": "^1.0.2",
+    "react-bootstrap-buttons": "^1.0.0",
+    "react-bootstrap-modal": "^4.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.15.1",
+    "react-native-paper": "^4.12.4",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
