--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
     "react-avatar": "^5.0.1",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
-    "react-modal": "^3.15.1",
-    "react-native-paper": "^4.12.4",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "NODE_ENV=production node_modules/react-scripts/bin/react-scripts.js start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
