--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://jamesnorthup.github.io/SpeedyGrams/",
+  "homepage": "https://jamesnorthup.github.io/SpeedyGrams",
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.10.2",
